# CSC2003-B1

./: Finite State Machine.vsdx  PID-PWM.c  README.md  main.c  mapping.c  mappingSimulation.c  mappingreadme.md
Communication/: readme.md
Communication/Dashboard/: .eslintrc.json  package-lock.json  package.json
Communication/Dashboard/pages/: _app.tsx  index.tsx
Communication/Integration/: main.c  ui_flow.py
Communication/MSP_M5Stick_UART/: main.c
Communication/Pico_HC05_UART/: Pico-HC05_Receiving.c  Pico-HC05_Receiving_Latency.c  Pico-HC05_Sending.c  Pico-HC05_Sending_Throughput.c
Communication/Pico_I2C/: M5_I2C.m5f  main.c
Communication/Pico_M5Stick_UART/: README.md  latency.c  latency_.m5f  main.c  throughput.c
Infrared/: CMakeLists.txt  barcode.c  readme.md
Mapping/: mapping.c
Motor Control/: PID-PWM.c  PID-PWM.h
Ultrasonic + Accelerometer/: CMakeLists.txt  README.md
Ultrasonic + Accelerometer/Examples/: CMakeLists.txt  cmExample.c
Ultrasonic + Accelerometer/pico_accelerator/: README.md  accerelometer.txt  accerelometer_m5.m5f  main.c
Ultrasonic + Accelerometer/pico_accelerator/Documentation/: Illustration of Kalman Filter & Complementary Filter.docx  algo_performance.xlsx
Ultrasonic + Accelerometer/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h  ultrasonicObject.cpp
pico_accelerator/: accerelometer.txt  main.c
ultrasonic/: CMakeLists.txt
ultrasonic/pico_accelerator/: CMakeLists.txt  README.md  main.c
ultrasonic/ultrasonic/: ultrasonic.c  ultrasonic.h
